--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 CONFIG_SERVICE_PASSWORD=test
 GIT_CONFIG_URL=https://github.com/acesyde/springboot-example-config
+HTTP_PROXY=http://ad-subs\pfcp8316:Orange201701@www-cache-nrs.si.fr.intraorange:3128/
+HTTPS_PROXY=http://ad-subs\pfcp8316:Orange201701@www-cache-nrs.si.fr.intraorange:3128/
+JAVA_OPTS=-Xmx200m -Xms100m -Dhttp.proxySet=true -Djava.net.useSystemProxies=true
